# stm32Prj

./: .gitmodules  CMakeLists.txt  README.MD  STM32F407ZGTx_FLASH.ld  enableOpenOcd.bat  main.c  stm32f4xx_it.c  system_stm32f4xx.c
CMSIS/DSP_Lib/: CMakeLists.txt
CMSIS/core/inc/: core_cm4.h
CMSIS/core/src/: syscall.c
CMSIS/drivers/: CMakeLists.txt
CORE/: syscall.c
HARDWARE/: CMakeLists.txt  hwm_init.cpp  hwm_pub.h
HARDWARE/KEY/: key.c  key.h
HARDWARE/LCD/: lcd.c  lcd.h  readme.md
HARDWARE/LED/: led.c  led.h
HARDWARE/USART/: usart.c  usart.h
SYSTEM/delay/: delay.c
SYSTEM/sys/: sys.c
SYSTEM/usart/: usart.c
USER/: LED.uvguix.kris  LED.uvoptx  LED.uvprojx
